# SolarEngine

./: CMakeLists.txt  DeclareDPIAware.manifest  README.md  main.manifest
include/: Debugging.h  IndexBuffer.h  Renderer.h  Shader.h  SolarObject.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  debug-console.h  engine-methods.h  engine-structures.h
res/shaders/: Basic.glsl
res/shaders/basic/: basic_fragment.glsl  basic_geometry.glsl  basic_vertex.glsl  textured_lit_fragment.glsl  textured_vertex.glsl  untextured_lit_fragment.glsl
res/shaders/extra/: depth_map_fragment.glsl  ui_vertex.glsl
res/shaders/standard/: basic_lit_fragment.glsl  basic_lit_geometry.glsl  textured_lit_fragment.glsl  textured_lit_geometry.glsl  textured_unlit_fragment.glsl  textured_vertex.glsl  unlit_vertex.glsl
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  SolarObject.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  debug-console.cpp  engine-methods.cpp  main-old.cpp  main.cpp  main.cpp.manifest
